Bug 1714754 - Always use DirectWrite to get glyph widths for variable fonts. r=lsalzman, a=jcristau

This ensures we get the correct advances for the variation settings that are in use,
not just the font's "default" advances from the hmtx table.

(I'm sad there wasn't a testcase that detected this regression, so added one here.)

Differential Revision: https://phabricator.services.mozilla.com/D118571